# rust-games

./: .gitignore
flappy-bird/: Cargo.toml
flappy-bird/src/: main.rs  screen.rs
snake-bevy/: Cargo.toml
snake-bevy/src/: constants.rs  food.rs  main.rs  snake.rs  window.rs
space-invaders/: Cargo.toml
space-invaders/assets/: sprite-sheet.json
space-invaders/src/: config.rs  constants.rs  controls.rs  frame.rs  interface.rs  main.rs  player.rs  render_helpers.rs  sprite_helpers.rs  spritesheet.rs  world.rs
